# trim_right_spaces

./: .clang-tidy  CMakeLists.txt  README.md  example.cpp
.github/workflows/: ci.yml
cmake/: apply_options.cmake  clang_format.cmake
test/: CMakeLists.txt  test.cpp
trim_right/: CMakeLists.txt
trim_right/include/: TrimRight.h
trim_right/src/: TrimRight.cpp
